tests/compile/userdata_setter_async.stderr
error: async field setter is not supported
  --> tests/compile/userdata_setter_async.rs:10:5
   |
10 |     async fn set_value(&mut self, val: u64) -> Result<()> {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `mlua::Result`
 --> tests/compile/userdata_setter_async.rs:1:5
  |
1 | use mlua::Result;
  |     ^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
